--- a/horfse.html
+++ b/horfse.html
@@ -3,5 +3,10 @@
     <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
+    <button id="test-btn" onclick="forceTest();">
+        test button
+    </button>
+    <br/>
+
 </body>
 </html>
