--- a/horfse.html
+++ b/horfse.html
@@ -1,13 +1,22 @@
 <html>
 <head>
     <script src="script.js" type="text/javascript"></script>
+    <style type="text/css">
+        html, body {
+            overflow: hidden;
+        }
+        .horse {
+            position: absolute;
+            z-index: 1;
+        }
+    </style>
 </head>
 <body>
     <button id="test-btn" onclick="forceTest();">
         test button
     </button>
     <br/>
-
+    
     <div id="container"></div>
 
 </body>
