styles for flipped images

--- a/horfse.html
+++ b/horfse.html
@@ -9,6 +9,14 @@
             position: absolute;
             z-index: 1;
         }
+        .flipX {
+            -webkit-transform: scaleX(-1);
+            transform: scaleX(-1);
+        }
+        .flipY {
+            -webkit-transform: scaleY(-1);
+            transform: scaleY(-1);
+        }
     </style>
 </head>
 <body>
