--- a/horfse.html
+++ b/horfse.html
@@ -17,6 +17,22 @@
             -webkit-transform: scaleY(-1);
             transform: scaleY(-1);
         }
+        @keyframes rightwards {
+            from {left: -10%;}
+            to {left: 110%;}
+        }
+        @keyframes leftwards {
+            from {left: 110%;}
+            to {left: -10%;}
+        }
+        @keyframes upwards {
+            from {left: 110%;}
+            to {left: -10%;}
+        }
+        @keyframes downwards {
+            from {top: -10%;}
+            to {top: 110%;}
+        }
     </style>
 </head>
 <body>
