--- a/horfse.html
+++ b/horfse.html
@@ -17,6 +17,10 @@
             -webkit-transform: scaleY(-1);
             transform: scaleY(-1);
         }
+        .rotate90 {
+            -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+        }
         @keyframes rightwards {
             from {left: -10%;}
             to {left: 110%;}
