fixed typo in keyframe "upwards"

--- a/horfse.html
+++ b/horfse.html
@@ -30,8 +30,8 @@
             to {left: -10%;}
         }
         @keyframes upwards {
-            from {left: 110%;}
-            to {left: -10%;}
+            from {top: 110%;}
+            to {top: -10%;}
         }
         @keyframes downwards {
             from {top: -10%;}
