--- a/horfse.html
+++ b/horfse.html
@@ -21,6 +21,15 @@
             -webkit-transform: rotate(90deg);
             transform: rotate(90deg);
         }
+        .rotate180 {
+            -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+        }
+        .rotate270 {
+            -webkit-transform: rotate(270deg);
+            transform: rotate(270deg);
+        }
+        
         @keyframes rightwards {
             from {left: -10%;}
             to {left: 110%;}
