--- a/horfse.html
+++ b/horfse.html
@@ -18,6 +18,7 @@
     <style type="text/css">
         html, body {
             overflow: hidden;
+            background-color: transparent;
         }
         .horse {
             position: absolute;
