--- a/horfse.html
+++ b/horfse.html
@@ -3,7 +3,7 @@
     <script src="script.js" type="text/javascript"></script>
     <script type="text/javascript">
         
-        const horseProbability = 25;
+        const horseProbability = 25;        //  percentage
         
         function addHorse () {
             let dice = Math.random()*100;
@@ -12,7 +12,7 @@
             }
         }
 
-        const decisionInterval = 1000;
+        const decisionInterval = 1000;      //  milliseconds
 
     </script>
     <style type="text/css">
